Bluewolf SFMTA/src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emissions__c</fullName>
        <label>Emissions</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <label>Fuel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Diesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biodiesel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasoline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to__c</fullName>
        <label>Sticker Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Pick up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send by mail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Vehicle_Number__c</fullName>
        <label>Internal Vehicle Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_GPS_Date_Time__c</fullName>
        <label>Latest GPS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <picklist>
            <picklistValues>
                <fullName>Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_ft__c</fullName>
        <label>Length (ft)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <label>License Plate</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Passenger_Capacity__c</fullName>
        <label>Passenger Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Expiration_Date__c</fullName>
        <label>Registration Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <label>Registration State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Expired or Incorrect Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not transmitting GPS data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emissions certification not provided/incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-2012 vehicle not grandfathered in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted - Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sticker_ID_Placard_ID__c</fullName>
        <label>Sticker ID/Placard ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <label>Vehicle Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>License_Plate__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Vehicle_Year__c</columns>
        <columns>Status__c</columns>
        <columns>Registration_Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Vehicles</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>License_Plate__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Vehicle_Year__c</columns>
        <columns>Status__c</columns>
        <columns>Registration_Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>My Vehicles</label>
    </listViews>
    <listViews>
        <fullName>New_Vehicles</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>License_Plate__c</columns>
        <columns>Vehicle_Make__c</columns>
        <columns>Vehicle_Model__c</columns>
        <columns>Vehicle_Year__c</columns>
        <columns>Status__c</columns>
        <columns>Registration_Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,Submitted - Pending Approval</value>
        </filters>
        <label>New Vehicles</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Vehicle_Registration_Up_For_Renewal_External</fullName>
        <columns>NAME</columns>
        <columns>License_Plate__c</columns>
        <columns>Internal_Vehicle_Number__c</columns>
        <columns>Registration_Expiration_Date__c</columns>
        <columns>Sticker_ID_Placard_ID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Registration_Expiration_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>Vehicle Registration Up For Renewal</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Registration_Expiration_Must_Be_Future</fullName>
        <active>false</active>
        <errorConditionFormula>Registration_Expiration_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Registration_Expiration_Date__c</errorDisplayField>
        <errorMessage>Your vehicle&apos;s registration cannot be expired.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rejection_Reason_Must_Be_Filled_Out</fullName>
        <active>true</active>
        <description>Must fill out rejection reason if you reject at the vehicle level</description>
        <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Rejected&quot;),  ISBLANK(TEXT(STL_Rejection_Reason__c)))</errorConditionFormula>
        <errorDisplayField>STL_Rejection_Reason__c</errorDisplayField>
        <errorMessage>Please fill out why you are rejecting this vehicle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STL_Operators_Can_Only_Select_Submitted</fullName>
        <active>true</active>
        <description>Prevents shuttle operators from changing vehicle status to anything but &quot;Inactive&quot; or &quot;Submitted - Pending Approval&quot;</description>
        <errorConditionFormula>AND( 
$Profile.Name = &quot;Customer Community Login 2&quot;, 
ISCHANGED(Status__c), 
NOT(OR(TEXT(Status__c) = &quot;Inactive&quot;,TEXT(Status__c) = &quot;Submitted - Pending Approval&quot;)))</errorConditionFormula>
        <errorMessage>Please wait for SFMTA to approve or deny your vehicle submission. Select Submitted when you are ready to submit or Inactive to deactivate this vehicle from your fleet.</errorMessage>
    </validationRules>
</CustomObject>